[package]
name = "tunelo"
version = "0.1.0"
authors = ["xrelkd <46590321+xrelkd@users.noreply.github.com>"]
edition = "2018"

default-run = "tunelo"
autobins = false

[features]
default = ["tunelo"]

app = ["structopt", "simple_logger", "toml", "serde_json", "comfy-table"]

tunelo = ["app"]

[lib]
name = "tunelo"
path = "src/lib.rs"

[[bin]]
name = "tunelo"
path = "src/bin/main.rs"
required-features = ["app"]

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = { version = "0.14" }

webpki = "0.21"
webpki-roots = "0.20"

trust-dns-resolver = "0.19"

snafu = "0.6"
url = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.5", optional = true }

byteorder = "1"
bytes = "0.5"

http = "0.2"
httparse = "1"

log = "0.4"
simple_logger = { version = "1", optional = true }

lru_time_cache = "0.10"

structopt = { version = "0.3", optional = true }
comfy-table = { version = "1", optional = true }
