[package]
name = "tunelo"
version = "0.1.8"
authors = ["xrelkd <46590321+xrelkd@users.noreply.github.com>"]
edition = "2021"

default-run = "tunelo"
autobins = false

[features]
default = ["tunelo"]

app = [
  "clap",
  "clap_complete",
  "tracing-subscriber",
  "toml",
  "serde_json",
  "comfy-table"
]

tunelo = ["app"]

[lib]
name = "tunelo"
path = "src/lib.rs"

[[bin]]
name = "tunelo"
path = "src/bin/main.rs"
required-features = ["app"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tokio-rustls = { version = "0.23" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.5", optional = true }

trust-dns-resolver = "0.22"
webpki = "0.21"
webpki-roots = "0.21"

byteorder = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
comfy-table = { version = "6", optional = true }
http = "0.2"
httparse = "1"
# FIXME: use `lru_time_cache` while re-implementing UDP support
# lru_time_cache = "0.11"
snafu = "0.7"
url = "2"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
